[Major] Refactored DataArchiveHandler
Now using a ArchiveTransaction, exposing the relevant methods. One should not directly access the DAOs anymore.

The ArchiveTransaction now properly flushes and this is not anymore a concern of the developer

Added additional tests